--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~50.0.14",
+    "expo-font": "~11.10.3",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "module-resolver": "^1.0.0",
     "react": "18.2.0",
