--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "module-resolver": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.0"
   },
