--- a/app.json
+++ b/app.json
@@ -3,6 +3,18 @@
     "name": "wefit-hub",
     "slug": "wefit-hub",
     "version": "1.0.0",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "backgroundColor": "#F6F6F5",
+      "resizeMode": "contain"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#5C210B"
+      }
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
