--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
