--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
+    "expo-linking": "~6.2.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "module-resolver": "^1.0.0",
